; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_citus_readfuncs.c_readJobInfo.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_citus_readfuncs.c_readJobInfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@T_Job = common dso_local global i32 0, align 4
@jobId = common dso_local global i32 0, align 4
@jobQuery = common dso_local global i32 0, align 4
@taskList = common dso_local global i32 0, align 4
@dependedJobList = common dso_local global i32 0, align 4
@subqueryPushdown = common dso_local global i32 0, align 4
@requiresMasterEvaluation = common dso_local global i32 0, align 4
@deferredPruning = common dso_local global i32 0, align 4
@partitionKeyValue = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @readJobInfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @readJobInfo(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i32 (...) @READ_TEMP_LOCALS()
  %4 = load i32*, i32** %2, align 8
  %5 = load i32, i32* @T_Job, align 4
  %6 = call i32 @CitusSetTag(i32* %4, i32 %5)
  %7 = load i32, i32* @jobId, align 4
  %8 = call i32 @READ_UINT64_FIELD(i32 %7)
  %9 = load i32, i32* @jobQuery, align 4
  %10 = call i32 @READ_NODE_FIELD(i32 %9)
  %11 = load i32, i32* @taskList, align 4
  %12 = call i32 @READ_NODE_FIELD(i32 %11)
  %13 = load i32, i32* @dependedJobList, align 4
  %14 = call i32 @READ_NODE_FIELD(i32 %13)
  %15 = load i32, i32* @subqueryPushdown, align 4
  %16 = call i32 @READ_BOOL_FIELD(i32 %15)
  %17 = load i32, i32* @requiresMasterEvaluation, align 4
  %18 = call i32 @READ_BOOL_FIELD(i32 %17)
  %19 = load i32, i32* @deferredPruning, align 4
  %20 = call i32 @READ_BOOL_FIELD(i32 %19)
  %21 = load i32, i32* @partitionKeyValue, align 4
  %22 = call i32 @READ_NODE_FIELD(i32 %21)
  ret void
}

declare dso_local i32 @READ_TEMP_LOCALS(...) #1

declare dso_local i32 @CitusSetTag(i32*, i32) #1

declare dso_local i32 @READ_UINT64_FIELD(i32) #1

declare dso_local i32 @READ_NODE_FIELD(i32) #1

declare dso_local i32 @READ_BOOL_FIELD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
